src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwF1000-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-floating true\n    default-column-width { fixed 1000; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 640 × 540, bounds: 1280 × 720, states: [Activated]
